--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+m3ugen (0.14) unstable; urgency=low
+
+  * Updated to use File::Basename instead of old hacked together string
+    comparisons.
+  * Fixed a few outstanding utf8-related bugs.
+  * Fixed a bug that caused multiple #EXTM3U lines to get written if you were
+    putting more than one album into a single playlist.
+
+ -- Alex Malinovich <demonbane@the-love-shack.net>  Wed, 12 Sep 2007 15:47:34 -0700
+
 m3ugen (0.13-2) unstable; urgency=low
 
   * Added standard COPYING, INSTALL, AUTHORS, and TODO files, preparing for a
