--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+m3ugen (0.17) unstable; urgency=low
+
+  * Added a check to see if the disc tag is supported by the underlying
+    library. If not, $disc is set to "undef" (which is the same value it would
+    get if the modified version of Audio::File couldn't read a disc property
+    for that particular file.)
+  * Updated copyright.
+
+ -- Alex Malinovich <demonbane@the-love-shack.net>  Mon, 17 Sep 2007 01:20:24 -0700
+
 m3ugen (0.16) unstable; urgency=low
 
   * This is the REAL 0.16. Not to be confused with the fake 0.15 that was 0.15
