--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+m3ugen (0.17-1) unstable; urgency=low
+
+  * Converting to native debian package in subversion. From this point will
+    handle source tarballs by dereferencing the changelog symlink and deleting
+    debian/ before rolling the tarball.
+  * Added a bunch of necessary files to debian/ (compat control copyright dirs
+    docs README.Debian rules)
+
+ -- Alex Malinovich <demonbane@the-love-shack.net>  Mon, 17 Sep 2007 01:54:15 -0700
+
 m3ugen (0.17) unstable; urgency=low
 
   * Added a check to see if the disc tag is supported by the underlying
