* Fixed rules to include changelog in package.
git-svn-id: file:///var/lib/svn/m3ugen/trunk@20 1e1f2d8e-b8a0-4649-aeed-5658290dd61f

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+m3ugen (0.17-2) unstable; urgency=low
+
+  * Fixed rules to include changelog in package.
+
+ -- Alex Malinovich <demonbane@the-love-shack.net>  Mon, 17 Sep 2007 03:07:41 -0700
+
 m3ugen (0.17-1) unstable; urgency=low
 
   * Converting to native debian package in subversion. From this point will
